--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Welcome to Zhang Wuyou's home on the web!</h1>
-   <img src="photo.jpg" />
+   <img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/1901404_454232151394360_5461339529864728300_n.jpg?oh=6f9f0df43d1883ce10964a590ca41889&oe=598514DE" />
    <h2>About</h2>
    <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunamn High School</a>, Singapore.</p>
    <h2>INterests</h2>
