--- a/page1.html
+++ b/page1.html
@@ -1,1 +1,23 @@
 
+<!DOCTYPE html>
+<html>
+ <head>
+   <link rel="stylesheet" href="style.css" />
+   <title>My Reaction Paper</title>
+ </head>
+ <body>
+   <h1>Our Times Movie Review By Zhang Wuyou</h1>
+   <h2>Written for DHS Movies Pte Ltd 
+     03 Febuary 2017</h2>
+
+   <img src="3D1CC352-D312-4632-8F09-8EC00E917591.jpg"/>
+   <h2>About</h2>
+   <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunamn High School</a>, Singapore.</p>
+   <h2>INterests</h2>
+   <p>I love drawing as drawing can make me feel relaxed.Listening to music is also what I love to do,as it can help me to distress. Last
+      but not least,I like <a href="https://en.wikipedia.org/wiki/Chinese_calligraphy">Chinese calligraphy</a>,as it can make me forget about the homeworks and all the stress I have.
+   <p>I am doing a <a href="https://docs.google.com/document/d/17-r8xs2gr5bXaZ9AjIhZy6Uxmhb1fXQFwniZAcUqqTY/edit?ts=58f95577">
+   Website Creation and Hosting Link using Github</a>
+   
+ </html>
+</!DOCTYPE html>
