--- a/page1.html
+++ b/page1.html
@@ -9,13 +9,21 @@
    <h1>Our Times Movie Review By Zhang Wuyou</h1>
    <h2>Written for DHS Movies Pte Ltd 
      03 Febuary 2017</h2>
+   <img src="photo1.jpg"/>
+   <p>Table of contents
+Table of contents	2
+Synopsis	3
+Review	4-5
+Characters	6
+Conclusion	7
+Biliography	8
+	
+</p>
+   <h2>Plot Synopsis</h2>
+  <img src=
+   <p>An ordinary high school girl Lin ZhenXin admires the most popular guy, OuYang FeiFan. While the school’s big bully, Xu TaiYu falls for the prettiest girl in the school, Tao MinMin. Lin ZhenXin and Xu TaiYu work together through many difficulties in order to get there dream date. Through their collaboration and as the day goes by,their friendship evolves and they learn more
+    things about true love.</p>
 
-   <img src="3D1CC352-D312-4632-8F09-8EC00E917591.jpg"/>
-   <h2>About</h2>
-   <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunamn High School</a>, Singapore.</p>
-   <h2>INterests</h2>
-   <p>I love drawing as drawing can make me feel relaxed.Listening to music is also what I love to do,as it can help me to distress. Last
-      but not least,I like <a href="https://en.wikipedia.org/wiki/Chinese_calligraphy">Chinese calligraphy</a>,as it can make me forget about the homeworks and all the stress I have.
    <p>I am doing a <a href="https://docs.google.com/document/d/17-r8xs2gr5bXaZ9AjIhZy6Uxmhb1fXQFwniZAcUqqTY/edit?ts=58f95577">
    Website Creation and Hosting Link using Github</a>
    
