--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Welcome to Zhang Wuyou's home on the web!</h1>
-   <img src="3D1CC352-D312-4632-8F09-8EC00E917591.jpg"/>
+   <img src="IMG_0113.jpg"/>
    <h2>About</h2>
    <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunamn High School</a>, Singapore.</p>
    <h2>INterests</h2>
