--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <h1>Welcome to Zhang Wuyou's home on the web!</h1>
    <img src="IMG_0113.jpg"/>
    <h2>About</h2>
-   <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunamn High School</a>, Singapore.</p>
+   <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunman High School</a>, Singapore.</p>
    <h2>INterests</h2>
    <p>I love drawing as drawing can make me feel relaxed.Listening to music is also what I love to do,as it can help me to distress. Last
       but not least,I like <a href="https://en.wikipedia.org/wiki/Chinese_calligraphy">Chinese calligraphy</a>,as it can make me forget about the homeworks and all the stress I have.
