--- a/page1.html
+++ b/page1.html
@@ -3,6 +3,7 @@
 <html>
  <head>
    <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="index.html" />
    <title>My Reaction Paper</title>
  </head>
  <body>
@@ -56,7 +57,7 @@ Andy Lau（刘德华）
 	 </p>
 	 
 	 <h2>Bibliography</h2>
-
+	 <a href="https://en.m.wikipedia.org/wiki/Our_Times">Our Times Wikipedia</a>
 
 
    
