--- a/page1.html
+++ b/page1.html
@@ -10,14 +10,15 @@
    <h2>Written for DHS Movies Pte Ltd 
      03 Febuary 2017</h2>
    <img src="photo1.jpg"/>
-   <p>Table of contents
+   <p>Table of content
+	   <li
 Table of contents	2
 Synopsis	3
 Review	4-5
 Characters	6
 Conclusion	7
 Biliography	8
-	
+	/li>
 </p>
    <h2>Plot Synopsis</h2>
   <img src="photo2.jpg"/>
@@ -33,22 +34,15 @@ Tai-yu later discovers that he has a blood clot in his brain, caused by the car 
 	 </p>
 	 <h2>Cast and Character</h2>
 	 <p>
-Cast
-Character
-Vivian Sung
-young Lin Chen-hsin (林真心)
-Joe Chen
-grown-up Lin Chen-hsin (林真心)
-Darren Wang
-young Hsu Tai-yu (徐太宇)
-Jerryl Yan
-grown-up Hsu Tai-yu (徐太宇)
-Dino Lee
-Ouyang Fei-fan (欧阳非凡)
-Dewi Chien
-Tao Min-min (陶敏敏)
-Andy Lau 
-Andy Lau（刘德华）
+<li
+Vivian Sung--young Lin Chen-hsin (林真心)
+Joe Chen--grown-up Lin Chen-hsin (林真心)
+Darren Wang--young Hsu Tai-yu (徐太宇)
+Jerryl Yan--grown-up Hsu Tai-yu (徐太宇)
+Dino Lee--Ouyang Fei-fan (欧阳非凡)
+Dewi Chien--Tao Min-min (陶敏敏)
+Andy Lau --Andy Lau（刘德华）
+    /li>
 	 </p>
 	 <h2>Conclusion</h2>
 	 <img scr="photo4.jpg"/>
