--- a/page1.html
+++ b/page1.html
@@ -10,40 +10,44 @@
    <h2>Written for DHS Movies Pte Ltd 
      03 Febuary 2017</h2>
    <img src="photo1.jpg"/>
-   <p>Table of content
-	   <li
-Table of contents	2
-Synopsis	3
-Review	4-5
-Characters	6
-Conclusion	7
-Biliography	8
-	/li>
-</p>
+	 <p>Table of content</p>
+	  
+	 <p>Table of contents	2</p>
+	 <p>Synopsis	3</p>
+	 <p>Review	4-5</p>
+	 <p>Characters	6</p>
+	 <p>Conclusion	7</p>
+	 <p>Biliography	8</p>
+	
+
    <h2>Plot Synopsis</h2>
   <img src="photo2.jpg"/>
    <p>An ordinary high school girl Lin ZhenXin admires the most popular guy, OuYang FeiFan. While the school’s big bully, Xu TaiYu falls for the prettiest girl in the school, Tao MinMin. Lin ZhenXin and Xu TaiYu work together through many difficulties in order to get there dream date. Through their collaboration and as the day goes by,their friendship evolves and they learn more
     things about true love.</p>
    <h2>Review</h2>
 	 <img scr="photo3.jpg"/>
-   <p>The film opens in the present day, where Lin Cheng-hsin (Joe Chen) is an ordinary office worker who leads a stressful life. Her name, "Cheng-hsin", literally means "sincere of heart", reflecting her hardworking nature which often gets her ridiculed by her younger subordinates. Dejected, she listens to a cassette recording of an old Andy Lau song. This brings her back to her high school days, when she was an ordinary high school girl, who idolised Lau and lived a simple, carefree life. She had a crush on Ouyang Fei-Fan, (Dino Lee), the school's most popular male student, and had two good girl friends.
-One day, 17 year old Lin (Vivian Sung) receives a chain letter, warning her of impending doom if she does not pass the message on. Naively, she passes it on to Hsu Tai-yu (Darren Wang), the school's notorious gangster boss, her math teacher and Tao Min-min (Dewi Chien), the school's most popular girl. While Tai-yu reads the letter, he gets hit by a car. After weeding out the letter's sender, the angry Tai-yu makes Cheng-hsin his 'friend' and forces her to run errands for him in exchange for leaving Ouyang alone, thus making her his errand-girl.
-By chance, Cheng-hsin accidentally overhears a conversation between Min-min and Ouyang and discovers that they are in a secret relationship. Dejected, she creates an alliance with Tai-yu, who likes Tao Min-min, to break the couple up. Throughout the course of events, Cheng-hsin and Tai-yu begin to understand each other better, and their friendship evolves as they began to learn a thing or two about true love. Eventually, they develop feelings for each other.
-Tai-yu later discovers that he has a blood clot in his brain, caused by the car accident and further exacerbated by his frequent brawling and falls. His parents decide to send him overseas, leaving Cheng-hsin with no way to contact him in an era without social media.
+   <p>The film opens in the present day, where Lin Cheng-hsin (Joe Chen) is an ordinary office worker who leads a stressful life. </p>
+   <p>Her name, "Cheng-hsin", literally means "sincere of heart", reflecting her hardworking nature which often gets her ridiculed by her younger subordinates. </p>
+   <p>Dejected, she listens to a cassette recording of an old Andy Lau song. This brings her back to her high school days, when she was an ordinary high school girl, who idolised Lau and lived a simple, carefree life. </p>
+   <p> She had a crush on Ouyang Fei-Fan, (Dino Lee), the school's most popular male student, and had two good girl friends.</p>
+   <p>One day, 17 year old Lin (Vivian Sung) receives a chain letter, warning her of impending doom if she does not pass the message on. </p>
+   <p>Naively, she passes it on to Hsu Tai-yu (Darren Wang), the school's notorious gangster boss, her math teacher and Tao Min-min (Dewi Chien), the school's most popular girl. While Tai-yu reads the letter, he gets hit by a car.</p>
+   <p> After weeding out the letter's sender, the angry Tai-yu makes Cheng-hsin his 'friend' and forces her to run errands for him in exchange for leaving Ouyang alone, thus making her his errand-girl.</p>
+   <p>By chance, Cheng-hsin accidentally overhears a conversation between Min-min and Ouyang and discovers that they are in a secret relationship. </p>
+   <p>Dejected, she creates an alliance with Tai-yu, who likes Tao Min-min, to break the couple up. Throughout the course of events, Cheng-hsin and Tai-yu begin to understand each other better, and their friendship evolves as they began to learn a thing or two about true love.</p>
+	 <p> Eventually, they develop feelings for each other.</p>
+<p>Tai-yu later discovers that he has a blood clot in his brain, caused by the car accident and further exacerbated by his frequent brawling and falls. His parents decide to send him overseas, leaving Cheng-hsin with no way to contact him in an era without social media.
 18 years later, Cheng-hsin leaves her unhappy job and relationship upon having rediscovered herself. She is still unable to book a ticket to an Andy Lau concert that is set to take place in Taipei, but fate intervenes and allows Lau to act as the means by which Lin Cheng-hsin and Hsu Tai-yu (Jerry Yan) are reunited as adults.
 	 </p>
 	 <h2>Cast and Character</h2>
-	 <p>
-<li
-Vivian Sung--young Lin Chen-hsin (林真心)
-Joe Chen--grown-up Lin Chen-hsin (林真心)
-Darren Wang--young Hsu Tai-yu (徐太宇)
-Jerryl Yan--grown-up Hsu Tai-yu (徐太宇)
-Dino Lee--Ouyang Fei-fan (欧阳非凡)
-Dewi Chien--Tao Min-min (陶敏敏)
-Andy Lau --Andy Lau（刘德华）
-    /li>
-	 </p>
+	 <p> Vivian Sung--young Lin Chen-hsin (林真心)</p>
+	 <p>Joe Chen--grown-up Lin Chen-hsin (林真心)</p>
+	 <p>Darren Wang--young Hsu Tai-yu (徐太宇)</p>
+	 <p>Jerryl Yan--grown-up Hsu Tai-yu (徐太宇)</p>
+	 <p>Dino Lee--Ouyang Fei-fan (欧阳非凡)</p>
+	 <p>Dewi Chien--Tao Min-min (陶敏敏)</p>
+	 <p>Andy Lau --Andy Lau（刘德华)</p>
+	 
 	 <h2>Conclusion</h2>
 	 <img scr="photo4.jpg"/>
 	 <p>This movie is about the student life in school, and the plot is really good. It has an exciting climax and the story was easy to understand. This is a utterly good movie and I recommend this movie to those who love reading story or watching shows about school lifes.
