--- a/page1.html
+++ b/page1.html
@@ -50,8 +50,7 @@
 	 
 	 <h2>Conclusion</h2>
 	 <img scr="photo4.jpg"/>
-	 <p>This movie is about the student life in school, and the plot is really good. It has an exciting climax and the story was easy to understand. This is a utterly good movie and I recommend this movie to those who love reading story or watching shows about school lifes.
-	 </p>
+	 <p>This movie is about the student life in school, and the plot is really good. It has an exciting climax and the story was easy to understand. This is a utterly good movie and I recommend this movie to those who love reading story or watching shows about school lifes. </p>
 	 
 	 <h2>Bibliography</h2>
 	 <a href="https://en.m.wikipedia.org/wiki/Our_Times">Our Times Wikipedia</a>
