--- a/page1.html
+++ b/page1.html
@@ -7,8 +7,8 @@
  </head>
  <body>
    <h1>Our Times Movie Review By Zhang Wuyou</h1>
-   <h2>Written for DHS Movies Pte Ltd 
-     03 Febuary 2017</h2>
+	 <h2>Written for DHS Movies Pte Ltd </h2>
+	<h3> 03 Febuary 2017</h3>
    <img src="photo1.jpg"/>
 	
    <h2>Plot Synopsis</h2>
