--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="style.css2" />
    <title>My Reaction Paper</title>
  </head>
  <body>
