--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
    <img src="IMG_0113.jpg"/>
    <h2>About</h2>
    <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunman High School</a>, Singapore.</p>
-   <h2>INterests</h2>
+   <h2>Interests</h2>
    <p>I love drawing as drawing can make me feel relaxed.Listening to music is also what I love to do,as it can help me to distress. Last
       but not least,I like <a href="https://en.wikipedia.org/wiki/Chinese_calligraphy">Chinese calligraphy</a>,as it can make me forget about the homeworks and all the stress I have.
    <p>I am doing a <a href="https://docs.google.com/document/d/17-r8xs2gr5bXaZ9AjIhZy6Uxmhb1fXQFwniZAcUqqTY/edit?ts=58f95577">
    Website Creation and Hosting Link using Github</a>
+    Check out my most recent <a href="https://17y1czhangwuyou.github.io/page1.html">movie review</a> on 'Our Times'!
    
  </html>
 </DOCTYPE html>
