--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>
    <h1>Welcome to Zhang Wuyou's home on the web!</h1>
    <img src="IMG_0113.jpg"/>
-   <h2>About</h2>
+   <h2>All about me</h2>
    <p>Hi! I am Zhang Wuyou, a 14-year old student from <a href="http://www.dunmanhigh.moe.edu.sg"> Dunman High School</a>, Singapore.</p>
    <h2>Interests</h2>
    <p>I love drawing as drawing can make me feel relaxed.Listening to music is also what I love to do,as it can help me to distress. Last
